--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
 
+<!--
     <canvas id ="background" data-processing-sources="./compiled_fireflies.pde">
     </canvas>
+-->
+    
+<video autoplay muted loop id="myVideo">
+  <source src="fireflies.mp4" type="video/mp4">
+</video>
     
 </body>
-<script src="js/processing.min.js"></script>
+<!--<script src="js/processing.min.js"></script>-->
 </html>
